[package]
name = "rics"
description = "Remote Inter-Connected Streams - datastream and bus routing"
version = "0.2.0"
homepage = "https://github.com/gsou/ricsctl"
authors = ["Skami"]
license = "MIT"
edition = "2018"
readme = "README.md"

[lib]
name = "rics"
path = "src/lib.rs"

[[bin]]
name = "ricsctl"
path = "src/main.rs"

[dependencies]
protobuf = { version = "2.8.1", features = ["with-bytes"] }
log = "0.4"
env_logger = "0.7.1"
clap = "2.33.0"
serialport = "3.3.0"
libloading = "0.5.2"
libc = "0.2"
rand = "0.7.2"
rlua = { git = "https://github.com/gsou/rlua.git" }

[target.'cfg(unix)'.dependencies]
socketcan = "1.7.0"

[build-dependencies]
protoc-rust = "2.0"

[dependencies.gtk]
version = "0.9.0"
features = ["v3_16"]

[dependencies.gio]
version = ""
features = ["v2_44"]

[dependencies.glib]
version = ""
features = ["v2_44"]
